@@ -34,6 +34,7 @@ public:
   int m_maxmruitems;
   BOOL m_mruonfilemenu;
   BOOL m_deleteregistry;
+  BOOL m_defaultopenro;
   //}}AFX_DATA
 
   // Overrides
