@@ -261,7 +261,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 216
         TOPMARGIN, 7
-        BOTTOMMARGIN, 170
+        BOTTOMMARGIN, 185
         HORZGUIDE, 19
         HORZGUIDE, 31
         HORZGUIDE, 40
@@ -949,7 +949,7 @@ BEGIN
     LTEXT           "minutes idle",IDC_STATIC,157,73,44,8
 END
 
-IDD_PS_SYSTEM DIALOGEX 0, 0, 223, 175
+IDD_PS_SYSTEM DIALOGEX 0, 0, 223, 190
 STYLE DS_SETFONT | WS_CHILD | WS_DISABLED | WS_CAPTION | WS_SYSMENU
 CAPTION "System"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
@@ -973,6 +973,8 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,10,127,199,18
     PUSHBUTTON      "Apply",IDC_REGDEL_BTN,20,148,50,14,WS_DISABLED
     CONTROL         "Start PasswordSafe at Login",IDC_STARTUP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,40,199,10
+    CONTROL         "Set databases to be read-only, by default, during open",IDC_DEFAULTOPENRO,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,175,203,10
 END
 
 IDD_PS_DISPLAY DIALOGEX 0, 0, 223, 229
