@@ -81,6 +81,7 @@ const PWSprefs::boolPref PWSprefs::m_bool_prefs[NumBoolPrefs] = {
   {_T("ClearClipoardOneExit"), true, ptApplication},        // application
   {_T("ShowToolbar"), true, ptApplication},                 // application
   {_T("ShowNotesAsToolTipsInViews"), false, ptApplication}, // application
+  {_T("DefaultOpenRO"), false, ptApplication},              // application
 };
 
 // Default value = -1 means set at runtime
