@@ -49,6 +49,9 @@ expiry date.
 [1901380] If the Esc key is not being used to minimize PasswordSafe, then
 it will close the Find Toolbar if active.
 [1901380] F3 (Repeat Find) works even if the Find Toolbar has been closed.
+[1887159] Allow preference for all databases to be opened 'Read-only' by
+default.  This can still be overriden during open if the file itself is not
+read-only.
 [1664535] Interpret "Remember 0 last databases" on the System Options as 
 "do not remember any opened database" in the configuration file or registry.
 [1399569, 912188] Separate the clear clipboard options on minimize and exit.
